@@ -517,6 +517,12 @@ xdg_mime_get_mime_type_for_file (const char  *file_name,
   if (_caches)
     return _xdg_mime_cache_get_mime_type_for_file (file_name, statbuf);
 
+  base_name = _xdg_get_base_name (file_name);
+  n = _xdg_glob_hash_lookup_file_name (global_hash, base_name, mime_types, 5);
+
+  if (n == 1)
+    return mime_types[0];
+
   if (!statbuf)
     {
       if (stat (file_name, &buf) != 0)
@@ -525,41 +531,8 @@ xdg_mime_get_mime_type_for_file (const char  *file_name,
       statbuf = &buf;
     }
 
-#if 0
   if (!S_ISREG (statbuf->st_mode))
     return XDG_MIME_TYPE_UNKNOWN;
-#endif
-
-  /* Sanel: added */
-  if (S_ISDIR (statbuf->st_mode))
-    return xdg_mime_type_folder;
-
-  if (S_ISCHR (statbuf->st_mode))
-    return xdg_mime_type_chardev;
-
-  if (S_ISBLK (statbuf->st_mode))
-    return xdg_mime_type_blockdev;
-
-  if (S_ISFIFO (statbuf->st_mode))
-    return xdg_mime_type_fifo;
-
-  if (S_ISSOCK (statbuf->st_mode))
-    return xdg_mime_type_socket;
-
-  if (S_ISLNK (statbuf->st_mode))
-    return xdg_mime_type_symlink;
-
-  /* Sanel: changed the order
-   * Now files will be first stat-ed and if it is proven it is a file then xdgmime will do the rest.
-   *
-   * This will prevent from wrong guessing, like to see '.emacs.d' or '.e' folders as unknown file or 
-   * files with some extension.
-   */
-  base_name = _xdg_get_base_name (file_name);
-  n = _xdg_glob_hash_lookup_file_name (global_hash, base_name, mime_types, 5);
-
-  if (n == 1)
-    return mime_types[0];
 
   /* FIXME: Need to make sure that max_extent isn't totally broken.  This could
    * be large and need getting from a stream instead of just reading it all
@@ -594,6 +567,38 @@ xdg_mime_get_mime_type_for_file (const char  *file_name,
     return mime_type;
 
   return XDG_MIME_TYPE_UNKNOWN;
+}
+
+/* Sanel: added xdg_mime_get_mime_type_for_file2() */
+const char *
+xdg_mime_get_mime_type_for_file2 (const char *file_name)
+{
+  struct stat buf;
+
+  /* assume if it can't be stat()-ed, it can't be opened */
+  if (stat (file_name, &buf) != 0)
+    return XDG_MIME_TYPE_UNKNOWN;
+
+  if (S_ISDIR (buf.st_mode))
+    return xdg_mime_type_folder;
+
+  if (S_ISCHR (buf.st_mode))
+    return xdg_mime_type_chardev;
+
+  if (S_ISBLK (buf.st_mode))
+    return xdg_mime_type_blockdev;
+
+  if (S_ISFIFO (buf.st_mode))
+    return xdg_mime_type_fifo;
+
+  if (S_ISSOCK (buf.st_mode))
+    return xdg_mime_type_socket;
+
+  if (S_ISLNK (buf.st_mode))
+    return xdg_mime_type_symlink;
+
+  /* now do real checks */
+  return xdg_mime_get_mime_type_for_file (file_name, &buf);
 }
 
 const char *
